@@ -1,3 +1,7 @@
+2003-02-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* real.c (asctoeg): Handle denormals in hexadecimal notation.
+
 2002-10-15  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (s390_split_branches): Add return
